Something more than hello world.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Henrik Heininen — Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+</head>
+<body>
+
+  <!-- Header -->
+  <header>
+    
+    Hello, my name is
+    <h1>Henrik Heininen</h1>
+    <p> </p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#experience">Experience</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I'm an engineering student interested in secure IoT solutions, embedded systems, and creating reliable hardware-software integrations. Passionate about elegant, practical design and building things that last.    </p>
+    <p>
+      My biggest strengths are in Python and C languages and I have experience with Django and various microcontroller platforms. I enjoy working on projects that challenge me to learn and grow, especially in the areas of IoT and embedded systems.
+    </p>
+    <p>
+      I am also enthusiastic about networking and have a homelab utilizing enterprise-grade hardware to run various services and applications. This setup allows me to experiment with different technologies and improve my skills in system administration and network management.
+    </p>
+  </section>
+
+  <!-- Experience Section -->
+  <section id="experience">
+    <h2>Education & Work History</h2>
+
+    <h3>Education</h3>
+    <ul>
+      <li>
+        <strong>Bachelor of Engineering, Information and Communications Technology</strong><br>
+        Turku University of Applied Sciences, 2021–2027
+      </li>
+      <li>
+        <strong>Vocational Qualification in Information and Communications Technology, Electronics Technician</strong><br>
+        Salo Region Vocational College, 2017-2020<br>
+      </li>
+    </ul>
+
+    <h3>Work History</h3>
+    <ul>
+      <li>
+        <strong>Logistics worker</strong><br>
+        Kesko Oyj, 2022- <br>
+        Responsibilities consist of operating a reach truck and handling arriving stock
+      </li>
+    </ul>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Featured Projects</h2>
+    <div class="project-list">
+      <div class="project-card">
+        <h3>Remote grain dryer monitoring system</h3>
+        <p>Project allows remote monitoring of critical drying properties such as temperature and humidity</p>
+        <a href="kuivuri.html">Read more →</a>
+      </div>
+      <div class="project-card">
+        <h3>Rekkaribotti</h3>
+        <p>Discord bot that searches and caches Finnish license plates and shows their information</p>
+        <a href="rekkari.html">Read more →</a>
+      </div>
+      <div class="project-card">
+        <h3>Home Lab</h3>
+        <p>My home lab is running on a Dell R730 Poweredge and runs various services and applications</p>
+        <a href="homelab.html">Read more →</a>
+      </div>
+      <div class="project-card">
+        <h3>Hop and Trip</h3>
+        <p>This was a TUAS product development course project where I was responsible for the programming</p>
+        <a href="game.html">Read more →</a>
+      </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>If you have any questions about this project or would like to collaborate, feel free to reach out:</p>
+    <p>Email: <a href="mailto:henrik@heiniset.fi">henrik@heiniset.fi</a></p>
+    <p><a class="link" href="https://github.com/notunderi" target="_blank" rel="noopener noreferrer"><img id="github" src="assets/images/github-mark.svg">GitHub</a></p>
+    <p><a class ="link"href="https://linkedin.com/in/heininen" target="_blank" rel="noopener noreferrer"><img id="linkedin" src="assets/images/InBug-Black.png">LinkedIn</a></p>
+  
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Henrik Heininen</p>
+    <p>Work in Progress</p>
+
+  </footer>
+
+</body>
+</html>
