Fixed contact links and removed some irrevelant stuff

--- a/homelab.html
+++ b/homelab.html
@@ -80,9 +80,8 @@
     <ul>
       <li>Proxmox VE for virtualization</li>
       <li>Docker and Docker Compose for containers</li>
-      <li>Ubuntu Server for VMs</li>
       <li>Grafana and Prometheus for monitoring</li>
-      <li>OpenVPN for secure remote access</li>
+      <li>Tailscale for secure remote access</li>
     </ul>
   </section>
 
