--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>If you have any questions about this project or would like to collaborate, feel free to reach out:</p>
+    <p>If you have any questions or would like to collaborate, feel free to reach out:</p>
     <p>Email: <a href="mailto:henrik@heiniset.fi">henrik@heiniset.fi</a></p>
     <p><a class="link" href="https://github.com/notunderi" target="_blank" rel="noopener noreferrer"><img id="github" src="assets/images/github-mark.svg">GitHub</a></p>
     <p><a class ="link"href="https://linkedin.com/in/heininen" target="_blank" rel="noopener noreferrer"><img id="linkedin" src="assets/images/InBug-Black.png">LinkedIn</a></p>
