Added a favicon, icon for email, cleaned up CSS and more images

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-
+  <div id="test" style="background-image: url(link/to/image.png)"><div>
+    
   <!-- Header -->
   <header>
     
@@ -18,6 +20,7 @@
     <h1>Henrik Heininen</h1>
     <p> </p>
     <nav>
+      <a href="index.html">Home</a>
       <a href="#about">About</a>
       <a href="#experience">Experience</a>
       <a href="#projects">Projects</a>
@@ -94,9 +97,9 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>If you have any questions or would like to collaborate, feel free to reach out:</p>
-    <p>Email: <a href="mailto:henrik@heiniset.fi">henrik@heiniset.fi</a></p>
-    <p><a class="link" href="https://github.com/notunderi" target="_blank" rel="noopener noreferrer"><img id="github" src="assets/images/github-mark.svg">GitHub</a></p>
-    <p><a class ="link"href="https://linkedin.com/in/heininen" target="_blank" rel="noopener noreferrer"><img id="linkedin" src="assets/images/InBug-Black.png">LinkedIn</a></p>
+    <p><a href="mailto:henrik@heiniset.fi"><img class="icon" src="assets/images/email.png">henrik@heiniset.fi</a></p>
+    <p><a class="link" href="https://github.com/notunderi" target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/images/github-mark.svg">GitHub</a></p>
+    <p><a class ="link"href="https://linkedin.com/in/heininen" target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/images/InBug-Black.png">LinkedIn</a></p>
   
   </section>
 
