--- a/rekkari.html
+++ b/rekkari.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
@@ -20,10 +21,10 @@
     <p>Discord bot for Finnish license plate information</p>
     <nav>
       <a href="index.html">Home</a>
-      <a href="#details">Details</a>
-      <a href="#features">Features</a>
-      <a href="#stack">Software Stack</a>
-      <a href="#contact">Contact</a>
+      <a href="index.html#about">About</a>
+      <a href="index.html#experience">Experience</a>
+      <a href="index.html#projects">Projects</a>
+      <a href="index.html#contact">Contact</a>
     </nav>
   </header>
 
@@ -81,9 +82,9 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>If you have any questions about this project or would like to collaborate, feel free to reach out:</p>
-    <p>Email: <a href="mailto:henrik@heiniset.fi">henrik@heiniset.fi</a></p>
-    <p><a class="link" href="https://github.com/notunderi" target="_blank" rel="noopener noreferrer"><img id="github" src="assets/images/github-mark.svg">GitHub</a></p>
-    <p><a class ="link"href="https://linkedin.com/in/heininen" target="_blank" rel="noopener noreferrer"><img id="linkedin" src="assets/images/InBug-Black.png">LinkedIn</a></p>
+    <p><a href="mailto:henrik@heiniset.fi"><img class="icon" src="assets/images/email.png">henrik@heiniset.fi</a></p>
+    <p><a class="link" href="https://github.com/notunderi" target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/images/github-mark.svg">GitHub</a></p>
+    <p><a class ="link"href="https://linkedin.com/in/heininen" target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/images/InBug-Black.png">LinkedIn</a></p>
   
   </section>
 
