Small styling changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Header -->
   <header>
     
-    Hello, my name is
+    <div style="font-size:12px;">Hello, my name is</div>
     <h1>Henrik Heininen</h1>
     <p> </p>
     <nav>
