Removed tags for images that do not exist yet

--- a/game.html
+++ b/game.html
@@ -49,7 +49,7 @@
   </section>
 
   <!-- Gallery Section -->
-  <section id="carousel">
+  <!-- <section id="carousel">
     <h2>Gallery</h2>
     <div class="carousel">
       <div class="carousel-images">
@@ -60,7 +60,7 @@
       <button class="carousel-btn prev">❮</button>
       <button class="carousel-btn next">❯</button>
     </div>
-  </section>
+  </section> -->
 
   <!-- Features Section -->
   <section id="features">
