Fixed broken links on tos site and unified all the pages. Fixed header from blocking the sight of content when jumping to element ids

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div style="font-size:12px;">Hello, my name is</div>
     <h1>Henrik Heininen</h1>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="/">Home</a>
       <a href="#about">About</a>
       <a href="#experience">Experience</a>
       <a href="#projects">Projects</a>
@@ -104,7 +104,6 @@
     <p>&copy; 2025 Henrik Heininen</p>
     <p>Work in Progress</p>
     <p id="tos"><a href="tos.html">Terms of Service</a></p>
-
   </footer>
 
 </body>
