--- a/game.html
+++ b/game.html
@@ -20,11 +20,11 @@
     <h1>Hop and Trip</h1>
     <p>A TUAS product development course project</p>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="index.html#about">About</a>
-      <a href="index.html#experience">Experience</a>
-      <a href="index.html#projects">Projects</a>
-      <a href="index.html#contact">Contact</a>
+      <a href="/">Home</a>
+      <a href="/#about">About</a>
+      <a href="/#experience">Experience</a>
+      <a href="/#projects">Projects</a>
+      <a href="/#contact">Contact</a>
     </nav>
   </header>
 
@@ -95,7 +95,7 @@
   <footer>
     <p>&copy; 2025 Henrik Heininen</p>
     <p>Work in Progress</p>
-
+    <p id="tos"><a href="tos.html">Terms of Service</a></p>
   </footer>
 
 </body>
