--- a/homelab.html
+++ b/homelab.html
@@ -21,11 +21,11 @@
     <h1>Home Lab</h1>
     <p>Exploring enterprise-grade hardware and services at home</p>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="index.html#about">About</a>
-      <a href="index.html#experience">Experience</a>
-      <a href="index.html#projects">Projects</a>
-      <a href="index.html#contact">Contact</a>
+      <a href="/">Home</a>
+      <a href="/#about">About</a>
+      <a href="/#experience">Experience</a>
+      <a href="/#projects">Projects</a>
+      <a href="/#contact">Contact</a>
     </nav>
   </header>
 
@@ -105,6 +105,7 @@
   <footer>
     <p>&copy; 2025 Henrik Heininen</p>
     <p>Work in Progress</p>
+    <p id="tos"><a href="tos.html">Terms of Service</a></p>
   </footer>
 
 </body>
