--- a/kuivuri.html
+++ b/kuivuri.html
@@ -20,11 +20,11 @@
     <h1>Grain Dryer Monitoring System</h1>
     <p>Remote monitoring of critical drying properties</p>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="index.html#about">About</a>
-      <a href="index.html#experience">Experience</a>
-      <a href="index.html#projects">Projects</a>
-      <a href="index.html#contact">Contact</a>
+      <a href="/">Home</a>
+      <a href="/#about">About</a>
+      <a href="/#experience">Experience</a>
+      <a href="/#projects">Projects</a>
+      <a href="/#contact">Contact</a>
     </nav>
   </header>
 
@@ -101,6 +101,7 @@
   <footer>
     <p>&copy; 2025 Henrik Heininen</p>
     <p>Work in Progress</p>
+    <p id="tos"><a href="tos.html">Terms of Service</a></p>
   </footer>
 
 </body>
