--- a/tos.html
+++ b/tos.html
@@ -17,11 +17,11 @@
     <div style="font-size:12px;">Hello, my name is</div>
     <h1>Henrik Heininen</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="#about">About</a>
-      <a href="#experience">Experience</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
+      <a href="/">Home</a>
+      <a href="/#about">About</a>
+      <a href="/#experience">Experience</a>
+      <a href="/#projects">Projects</a>
+      <a href="/#contact">Contact</a>
     </nav>
   </header>
 
@@ -72,6 +72,7 @@
   <footer>
     <p>&copy; 2025 Henrik Heininen</p>
     <p>Work in Progress</p>
+    <p id="tos"><a href="tos.html">Terms of Service</a></p>
   </footer>
 
 </body>
