Added caption texts to carousel images. Some wording changes and typo fixes. Ran images through an optimizer.

--- a/homelab.html
+++ b/homelab.html
@@ -46,7 +46,7 @@
         Remote access is provided through Tailscale, due to my apartment network being firewalled and doesn't support opening ports.
     </p>
     <p>
-        Hosted services include Nextcloud for cloud storage, Pi-hole for ad-blocking and local domains, OpnSense for firewall and routing, Jellyfin for media streaming, and various other applications for personal use.
+        Hosted services include Nextcloud for cloud storage, Pi-hole for ad-blocking and local domains, OpnSense for firewall and routing, Jellyfin and Servarr stack under Docker  for media streaming, and various other applications for personal use.
     </p>
     <p>Network infrastructure consists of the R730 server, a Telewell router working as a Wi-Fi access point, my personal desktop computer, TV and my Playstation all connected through an HP ProCurve managed switch.</p>
   </section>
@@ -56,8 +56,8 @@
     <h2>Gallery</h2>
     <div class="carousel">
       <div class="carousel-images">
-        <img src="assets/images/homelab1.jpg" alt="Home Lab Setup 1" />
-        <img src="assets/images/homelab2.jpg" alt="Home Lab Setup 2" />
+        <img src="assets/images/homelab1.jpg" alt="Proxmox view" />
+        <img src="assets/images/homelab2.jpg" alt="Server + switch sitting in my closet" />
       </div>
       <button class="carousel-btn prev">❮</button>
       <button class="carousel-btn next">❯</button>
