--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <ul>
       <li>
         <strong>Bachelor of Engineering, Information and Communications Technology</strong><br>
-        Turku University of Applied Sciences, 2021–2027
+        Turku University of Applied Sciences, 2021 –
       </li>
       <li>
         <strong>Vocational Qualification in Information and Communications Technology, Electronics Technician</strong><br>
-        Salo Region Vocational College, 2017-2020<br>
+        Salo Region Vocational College, 2017 - 2020<br>
       </li>
     </ul>
 
@@ -82,6 +82,11 @@
         <h3>Home Lab</h3>
         <p>My home lab is running on a Dell R730 Poweredge and runs various services and applications</p>
         <a href="homelab.html">Read more →</a>
+      </div>
+      <div class="project-card">
+        <h3>STM32 based automotive gauge display</h3>
+        <p>DIY automotive gauge display using an STM32 microcontroller and LVGL graphics library</p>
+        <a href="stm32.html">Read more →</a>
       </div>
       <div class="project-card">
         <h3>Hop and Trip</h3>
