Made entire card area clickable

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section id="projects">
     <h2>Featured Projects</h2>
     <div class="project-list">
-      <div class="project-card">
+      <div href="kuivuri.html" class="project-card">
         <h3>Remote grain dryer monitoring system</h3>
         <p>Project allows remote monitoring of critical drying properties such as temperature and humidity</p>
         <a href="kuivuri.html">Read more →</a>
@@ -91,8 +91,9 @@
       <div class="project-card">
         <h3>Hop and Trip</h3>
         <p>This was a TUAS product development course project where I was responsible for the programming</p>
-        <a href="game.html">Read more →</a>
+        <a href="game.html">Read more →</a></a>
       </div>
+
   </section>
 
   <!-- Contact Section -->
